--- a/packages/mdl-button/mdl-button.scss
+++ b/packages/mdl-button/mdl-button.scss
@@ -39,8 +39,7 @@
   box-sizing: border-box;
   -webkit-appearance: none;
 
-  &::before,
-  &::after {
+  &::before {
     position: absolute;
     top: 0;
     left: 0;
@@ -60,15 +59,7 @@
     opacity: .12;
   }
 
-  &::after {
-    width: 100%;
-    height: 100%;
-    background: black;
-    opacity: 0;
-    overflow: hidden;
-  }
-
-  &:active::after {
+  &:active::before {
     opacity: .06;
   }
 
